tests/baselines/reference/asiPreventsParsingAsAmbientExternalModule02.errors.txt
asiPreventsParsingAsAmbientExternalModule02.ts(4,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== asiPreventsParsingAsAmbientExternalModule02.ts (1 errors) ====
    var declare: number;
    var module: string;
    
    module container {
           ~~~~~~~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        declare                // this is the identifier 'declare'
        module                 // this is the identifier 'module'
        "my external module"   // this is just a string
        { }                    // this is a block body
    }